@@ -4,6 +4,7 @@
 // W32 Library Implementation
 // $Id$
 // ---------------------------------------------------------------------------
+#include "R.h"
 #include "lib.hpp"
 #include "win32gui.hpp"
 #include <windows.h>
@@ -23,7 +24,7 @@ gui::GUIFactory* getGUIFactory()
 // printMessage
 // ---------------------------------------------------------------------------
 void printMessage( const char* string ) {
-  ::MessageBox(NULL, string, "RGL library", MB_OK|MB_ICONINFORMATION);
+  warning("RGL: %s\n", string);
 }
 // ---------------------------------------------------------------------------
 // getTime
